# CQQ

./: .gitignore  readme.md
diff_demo_ros2_control_ws/src/diff_test_controller/src/: diff_test_controller.cpp
note/: note1.md
robot_ws/src/my_hardware_interface/: CMakeLists.txt  my_hardware_interface.xml  package.xml
robot_ws/src/my_hardware_interface/src/: robot_hardware_interface.cpp
robot_ws/src/robot_control/: package.xml  setup.py
robot_ws/src/robot_control/robot_control/: effort_control.py  effort_control_new.py
robot_ws/src/robot_controller/: CMakeLists.txt  controller_plugin.xml  package.xml  robot_controller.xml
robot_ws/src/robot_controller/include/robot_controller/: my_controller.hpp  odometry.hpp  validate_my_controller_parameters.hpp  visibility_control.h
robot_ws/src/robot_controller/resource/robot_controller/: my_controller.yaml
robot_ws/src/robot_controller/src/: my_controller.cpp  my_controller.yaml  odometry.cpp
robot_ws/src/robot_controller/test/: my_controller_params.yaml  my_controller_preceeding_params.yaml  test_load_my_controller.cpp  test_my_controller.cpp  test_my_controller.hpp  test_my_controller_preceeding.cpp
robot_ws/src/robot_description/: CMakeLists.txt  package.xml
robot_ws/src/robot_description/config/: robot_ros2_controller.yaml
robot_ws/src/robot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
robot_ws/src/robot_description/urdf/: base.xacro  robot.xacro  robot_ros2_control.xacro
robot_ws/src/robot_hardware_interface/: CMakeLists.txt  package.xml  robot_hardware_interface.xml
(+9 files in other folders)
